@@ -1,11 +1,14 @@
 pbuilder (0.153) UNRELEASED; urgency=low
 
+  [Junichi Uekawa]
   * fix pdebuild --help output (closes: #367133)
   * Support for new style architecture specifications (closes: #363193)
     Thanks to Peter Eisentraut for patch.
-  * update documentation to add a snippet.
-  
- -- Junichi Uekawa <dancer@debian.org>  Mon, 15 May 2006 03:10:06 +0900
+  * pbuilder-doc.xml: update documentation to add an example snippet for
+    using locally built packages from pbuilder.
+    And other minor updates.
+
+ -- Junichi Uekawa <dancer@debian.org>  Wed, 17 May 2006 11:46:36 +0900
 
 pbuilder (0.152) unstable; urgency=low
 
