@@ -1,3 +1,8 @@
+2006-05-17  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: minor updates to the
+	documentation.
+
 2006-05-15  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml: document method for adding local
